# internal/domain/requests/transaction.go
@@ -18,7 +18,18 @@ type YearAmountTransactionMerchant struct {
 	Year       int `json:"year" validate:"required"`
 }
 
-type MonthlyYearTransactionMethodMerchant struct {
+type MonthMethodTransaction struct {
+	Year  int `json:"year" validate:"required"`
+	Month int `json:"month" validate:"required"`
+}
+
+type MonthMethodTransactionMerchant struct {
+	MerchantID int `json:"merchant_id" validate:"required"`
+	Year       int `json:"year" validate:"required"`
+	Month      int `json:"month" validate:"required"`
+}
+
+type YearMethodTransactionMerchant struct {
 	MerchantID int `json:"merchant_id" validate:"required"`
 	Year       int `json:"year" validate:"required"`
 }
